[package]
name = "spikenaut-fpga"
version = "0.1.0"
edition = "2021"
authors = ["Raul Mc <raulmc@example.com>"]
license = "GPL-3.0-or-later"
description = "SNN-to-FPGA deployment pipeline: Q8.8 fixed-point parameter export, .mem file generation, UART spike readback, and Vivado timing report parsing for neuromorphic hardware"
repository = "https://github.com/rmems/spikenaut-fpga"
keywords = ["snn", "fpga", "neuromorphic", "spikenaut", "q8-8"]
categories = ["science", "hardware-support", "algorithms"]

[lib]
name = "spikenaut_fpga"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
serialport = { version = "4.3", optional = true }

[features]
default = []
uart = ["serialport"]

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
